#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(johnnie, 0.0, ducino@gmail.com)
AM_INIT_AUTOMAKE(johnnie, 0.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.

AC_OUTPUT(Makefile)
